--- a/Membership_website/Membership_website/Membership_website.csproj
+++ b/Membership_website/Membership_website/Membership_website.csproj
@@ -238,6 +238,8 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Content\Images\" />
+    <Folder Include="Entities\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
